[package]
name = "rocket_newrelic"
version = "0.1.0"
authors = ["Ben Sully <ben.sully@yougov.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1", optional = true }
log = "0.4"
newrelic = { git = "https://github.com/sd2k/newrelic", rev = "8adf87a1c2ef989ebdb5acac61a246388753339f" }
rocket = "0.4"

[dev-dependencies]
rocket_contrib = "0.4"
reqwest = "0.9"
serde_json = "1"
