[package]
name = "rocket_newrelic"
description = """
A Rocket fairing instrumenting requests using New Relic.

Attach the fairing to your `Rocket` app, and any requests that include
a `Transaction` in their request guard will be instrumented using
the handler base path and name as the transaction name.
"""
version = "0.1.0"
authors = ["Ben Sully <ben@bsull.io>"]
repository = "https://github.com/sd2k/rocket_newrelic"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
diesel = { version = "1", optional = true }
log = "0.4"
newrelic = "0.2"
rocket = { version = "0.5.0-rc.1", default_features = false }

[dev-dependencies]
rocket = { version = "0.5.0-rc.1", default_features = false, features = ["json"] }
reqwest = "0.11"
serde_json = "1"
